[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/kenny_sport_assets/ball_basket2.png" type="Texture" id=1]
[ext_resource path="res://assets/kenny_sport_assets/ball_basket1.png" type="Texture" id=2]
[ext_resource path="res://src/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/sound_assets/458669__jorgerosa__missile-launch.ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 5.15276

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "moving",
"speed": 5.0
} ]

[node name="Player" type="RigidBody2D"]
position = Vector2( -2.94891, 24.6987 )
scale = Vector2( 5, 5 )
collision_layer = 0
gravity_scale = 1.5
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.218387, -1.64569 )
scale = Vector2( 3.12386, 2.92603 )
frames = SubResource( 2 )
animation = "moving"

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="sleeping_state_changed" from="." to="." method="_on_Player_sleeping_state_changed"]
